# plots

./: .gitignore  .travis.yml  Diagrams-Coordinates-Isomorphic.html  Diagrams-Coordinates-Polar.html  LICENSE  Plots-Axis-ColourBar.html  Plots-Axis-Grid.html  Plots-Axis-Labels.html  Plots-Axis-Line.html  Plots-Axis-Render.html  Plots-Axis-Scale.html  Plots-Axis-Ticks.html  Plots-Axis-Title.html  Plots-Axis.html  Plots-CmdLine.html  Plots-Legend.html  Plots-Name.html  Plots-Style.html  Plots-Types-Bar.html  Plots-Types-Boxplot.html  Plots-Types-Density.html  Plots-Types-Function.html  Plots-Types-HeatMap.html  Plots-Types-Histogram.html  Plots-Types-Line.html  Plots-Types-Others.html  Plots-Types-Pie.html  Plots-Types-Points.html  Plots-Types-Ribbon.html  Plots-Types-Scatter.html  Plots-Types-Smooth.html  Plots-Types-Text.html  Plots-Types.html  Plots-Util.html  Plots-Utils.html  Plots.html  README.md  doc-index-38.html  doc-index-95.html  doc-index-A.html  (+63 more)
examples/: Dataset.hs  README.md  area.hs  areagroup.hs  bar.hs  boxplot.hs  boxplotpoint.hs  criterion.csv  criterion.hs  functions.hs  heat.hs  histogram.hs  histogramgroup.hs  limits.hs  line.hs  log-axis.hs  normalbar.hs  pie.hs  plots-examples.cabal  pointarea.hs  polar.hs  ratiobar.hs  ribbon.hs  ribbonopacity.hs  scatter-2.hs  scatter-3.hs  scatter.hs  splitbar.hs  stackedbar.hs  steps.hs  stocks.hs  table.hs  variedpie.hs  vectorfield.hs
examples/lib/: plots-examples.cabal
examples/old/: bar.hs  density.hs  functionline.hs  normalbar.hs  others.hs  pointarea.hs  points.hs  polar.hs  randompie.hs  ratiobar.hs  rings.hs  simplepie.hs  smoothsimple.hs  steps.hs  table.hs  text.hs
plots/: distributions.hs
src/: Diagrams-Coordinates-Isomorphic.html  Diagrams-Coordinates-Polar.html  Diagrams.Coordinates.Isomorphic.html  Diagrams.Coordinates.Polar.html  Plots-Axis-ColourBar.html  Plots-Axis-Grid.html  Plots-Axis-Labels.html  Plots-Axis-Line.html  Plots-Axis-Render.html  Plots-Axis-Scale.html  Plots-Axis-Ticks.html  Plots-Axis.html  Plots-CmdLine.html  Plots-Legend.html  Plots-Name.html  Plots-Style.html  Plots-Types-Bar.html  Plots-Types-Boxplot.html  Plots-Types-Density.html  Plots-Types-Function.html  Plots-Types-HeatMap.html  Plots-Types-Histogram.html  Plots-Types-Line.html  Plots-Types-Others.html  Plots-Types-Pie.html  Plots-Types-Points.html  Plots-Types-Ribbon.html  Plots-Types-Scatter.html  Plots-Types-Smooth.html  Plots-Types-Text.html  Plots-Types.html  Plots-Utils.html  Plots.Axis.ColourBar.html  Plots.Axis.Grid.html  Plots.Axis.Labels.html  Plots.Axis.Line.html  Plots.Axis.Render.html  Plots.Axis.Scale.html  Plots.Axis.Ticks.html  Plots.Axis.Title.html  (+23 more)
src/Diagrams/: Extra.hs  LinearMap.hs  Prelude2.hs  Projections.hs
src/Diagrams/Coordinates/: Isomorphic.hs  Polar.hs  Traversals.hs
src/Plots/: API.hs  Axis.hs  CmdLine.hs  Legend.hs  Name.hs  State.hs  Style.hs  Themes.hs  Types.hs  Util.hs  Utils.hs
src/Plots/API/: Bar.hs  Boxplot.hs  Density.hs  Function.hs  Histogram.hs  Line.hs  Others.hs  Pie.hs  Points.hs  Ribbon.hs  Scatter.hs  Smooth.hs  Text.hs
src/Plots/Axis/: ColourBar.hs  Grid.hs  Labels.hs  Line.hs  Render.hs  Scale.hs  Ticks.hs  Title.hs
src/Plots/Types/: Bar.hs  Boxplot.hs  Bubble.hs  Density.hs  Function.hs  HeatMap.hs  Heatmap.hs  Histogram.hs  Line.hs  Others.hs  Pie.hs  Points.hs  Ribbon.hs  Scatter.hs  Smooth.hs  Surface.hs  Text.hs
test/: RunExamples.hs  plots-test.cabal
unfinished/: Density.hs  Others.hs  Points.hs
