name:                plots
version:             0.1.0.0
synopsis:            Diagrams based plotting library.
homepage:            http://github.com/cchalmers/plots
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
bug-reports:         http://github.com/cchalmers/plots
stability:           Experimental
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md plots/*.png
extra-doc-files:     plots/*.png
description:         Diagrams based plotting library.

source-repository head
 type:     git
 location: http://github.com/cchalmers/plots

library
  exposed-modules:
    Plots
    Plots.Axis
    Plots.Axis.ColourBar
    Plots.Axis.Grid
    Plots.Axis.Labels
    Plots.Axis.Render
    Plots.Axis.Ticks
    Plots.CmdLine
    Plots.Legend
    Plots.Name
    Plots.Themes
    Plots.Types
    Plots.Types.Histogram
    Plots.Types.Line
    Plots.Types.Function
    Plots.Types.Scatter
    Plots.Types.Ribbon
    Plots.Types.Boxplot
    Plots.Types.Others
    Plots.Types.Points
    Plots.Types.Pie
    Plots.Types.Smooth
    Plots.Types.Text
    Plots.Utils
    Diagrams.Coordinates.Isomorphic
    Diagrams.Coordinates.Polar
  hs-source-dirs:      src
  build-depends:
    base          >= 4.3 && < 5.0,
    adjunctions,
    colour,
    containers    >= 0.3 && < 0.6,
    data-default  >= 0.5 && < 0.6,
    diagrams-core >= 1.3 && < 1.4,
    diagrams-lib  >= 1.3 && < 1.4,
    directory,
    distributive,
    transformers,
    filepath,
    fingertree,
    hashable      >= 1.1 && < 1.3,
    lens          >= 4.6 && < 5.0,
    linear        >= 1.2 && < 2.0,
    monoid-extras >= 0.3 && < 0.6,
    mtl           >= 1.0 && < 3.2,
    old-time,
    optparse-applicative,
    process,
    semigroupoids,
    semigroups,
    split         >= 0.1.2 && < 0.5,
    time,
    vector,
    profunctors,
    intervals

  ghc-options:         -Wall

  default-language:  Haskell2010
