name:                plots
version:             0.1.1.3
synopsis:            Diagrams based plotting library
homepage:            http://github.com/cchalmers/plots
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
bug-reports:         http://github.com/cchalmers/plots
stability:           Experimental
category:            Graphics
build-type:          Simple
cabal-version:       1.18
extra-source-files:  README.md diagrams/*.svg
extra-doc-files:     diagrams/*.svg
description:         Diagrams based plotting library.
tested-with: GHC==9.2.1, GHC==8.8.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4

source-repository head
 type:     git
 location: http://github.com/cchalmers/plots

library
  exposed-modules:
    Plots
    Plots.Axis
    Plots.Axis.ColourBar
    Plots.Axis.Grid
    Plots.Axis.Labels
    Plots.Axis.Line
    Plots.Axis.Render
    Plots.Axis.Ticks
    Plots.Axis.Title
    Plots.Axis.Scale
    Plots.Legend
    Plots.Name
    Plots.Style
    Plots.Types
    Plots.Types.Bar
    Plots.Types.Histogram
    Plots.Types.HeatMap
    Plots.Types.Line
    Plots.Types.Pie
    Plots.Types.Scatter
    Plots.Util
    Diagrams.Coordinates.Isomorphic
    Diagrams.Coordinates.Polar
  hs-source-dirs:      src
  build-depends:
    base          >= 4.7 && < 5.0,
    adjunctions,
    colour,
    containers    >= 0.3 && < 0.7,
    data-default  >= 0.5 && < 0.8,
    diagrams-core >= 1.3 && < 1.6,
    diagrams-lib  >= 1.3 && < 1.6,
    directory,
    distributive,
    transformers,
    filepath,
    fingertree,
    hashable      >= 1.1 && < 1.4,
    lens          >= 4.6 && < 5.2,
    linear        >= 1.2 && < 2.0,
    monoid-extras >= 0.3 && < 0.7,
    mtl           >= 1.0 && < 2.3,
    optparse-applicative,
    statistics,
    process,
    semigroupoids,
    semigroups,
    split         >= 0.1.2 && < 0.5,
    time,
    vector,
    profunctors,
    JuicyPixels,
    intervals,
    base-orphans

  ghc-options:         -Wall

  default-language:  Haskell2010
