name:                plots-test
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.2

executable RunExamples
  hs-source-dirs:      .
  main-is:             RunExamples.hs
  build-depends:       base
                     , plots
                     , shake
                     , plots-examples
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
